--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "debug": "ndb node src/server.js",
-    "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "predeploy": "npm audit && npm run migrate-production",
+    "deploy": "git push heroku master",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate-production": "postgrator --config postgrator-production-config.js"
   },
   "engines": {
     "node": "10.14.0"
@@ -22,7 +24,11 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
-    "morgan": "^1.9.1"
+    "knex": "^0.17.3",
+    "morgan": "^1.9.1",
+    "pg": "^7.11.0",
+    "postgrator-cli": "^3.1.0",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
