--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "knex": "^0.17.3",
+    "logger": "0.0.1",
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
     "postgrator-cli": "^3.1.0",
+    "winston": "^3.2.1",
     "xss": "^1.0.6"
   },
   "devDependencies": {
