--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.17.3",
     "logger": "0.0.1",
     "morgan": "^1.9.1",
