--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
     "postgrator-cli": "^3.1.0",
+    "react-confirm-alert": "^2.4.1",
     "winston": "^3.2.1",
     "xss": "^1.0.6"
   },
